syntax = "proto3";

package com.example.demo.anotherhelloservice;

// The request message containing the user's name.
message AnotherHelloRequest {
    string name = 1;
}

// The response message containing the greetings
message AnotherHelloReply {
    string message = 1;
}

// Another greeting service definition.
service AnotherHelloService {
    // Sends a greeting
    rpc SayHello (AnotherHelloRequest) returns (AnotherHelloReply) {
    }
}
